Avoid wrapping on ios

--- a/style/_form.scss
+++ b/style/_form.scss
@@ -637,9 +637,13 @@
 		min-height: util.dp(46);
 	}
 
+	&.date {
+		input.control {
+			white-space: nowrap; // for ios date field
+		}
+	}
+
 	&.datetime {
-
-
 		.time {
 			input.text.hour {
 				padding-left:0;
